--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background2"
-    tools:context=".MainActivity">
+    android:background="@drawable/backgraoun4"
+    tools:context="com.app.ui.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/poppins_semibold"
-            android:textColor="#3949AB"
+            android:textColor="#EDEDED"
             android:text="WALLET"
             android:textSize="14sp" />
 
