--- a/app/src/main/res/drawable/backgraoun4.xml
+++ b/app/src/main/res/drawable/backgraoun4.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#311B92"
-        android:endColor="#4A148C"
-        android:angle="225"
-        />
-    <corners
-        android:radius="15dp"/>
+        android:startColor="#060A18"
+        android:endColor="#0B132E"
+        android:angle="225" />
 </shape>
