--- a/app/src/main/res/drawable/background_blue.xml
+++ b/app/src/main/res/drawable/background_blue.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#1E51A1"
-        android:endColor="#1A237E"
+        android:startColor="#70AAC1E6"
+        android:endColor="#34868BC3"
         android:angle="225"
         />
     <corners
-        android:radius="15dp"/>
+        android:radius="1dp"/>
 </shape>
