--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgraoun4"
+    android:background="@drawable/background_comp"
     tools:context="com.app.ui.MainActivity">
 
     <RelativeLayout
@@ -12,110 +12,212 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/lblText"
+            android:id="@+id/lblSum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:fontFamily="@font/poppins_semibold"
-            android:textColor="#EDEDED"
-            android:text="WALLET"
-            android:textSize="14sp" />
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="#2196F3"
+            android:text="$ 1 233,22"
+            android:textSize="40sp" />
 
+        <TextView
+            android:id="@+id/lblText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lblSum"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="#2196F3"
+            android:text="TOTAL WORTH"
+            android:textSize="10dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardV"
-            android:layout_below="@+id/lblText"
+        <HorizontalScrollView
+            android:id="@+id/hscrollv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            app:cardCornerRadius="20dp"
-            android:elevation="15dp">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lblText">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/background"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp">
+                android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/txtMoney"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
-                    android:layout_centerHorizontal="true"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="R$"
-                    android:layout_toLeftOf="@+id/lblMoney"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/lblMoney"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_centerHorizontal="true"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text=" 1 345, 20"
-                    android:textColor="#FFFFFF"
-                    android:textSize="38sp" />
-
-                <ImageView
-                    android:id="@+id/imgIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@+id/lblMoney"
-                    android:src="@drawable/ic_arrow_up"
-                    android:layout_marginTop="40dp"/>
-
-                <RelativeLayout
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardbest"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="40dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_below="@id/lblMoney"
-                    android:background="@drawable/background3">
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    app:cardCornerRadius="20dp"
+                    android:elevation="15dp">
 
-                    <TextView
-                        android:id="@+id/lblPts"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_centerHorizontal="true"
-                        android:fontFamily="@font/poppins_medium"
-                        android:textSize="10sp"
-                        android:text=" 455.600 (2,34%) PTS"
-                        android:textColor="#070707"/>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="5dp"
-                        android:src="@drawable/ic_arrow_down_mini"
-                        android:layout_toRightOf="@+id/lblPts"/>
+                        <TextView
+                            android:id="@+id/text_money_best"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:text="245.00"
+                            android:fontFamily="@font/poppins_bold"
+                            android:textSize="30sp"/>
 
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/pct_best"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_toRightOf="@+id/img_arrow"
+                            android:layout_below="@+id/text_money_best"
+                            android:text="3.34%"
+                            android:fontFamily="@font/poppins_medium"
+                            android:textSize="18sp"
+                            android:textColor="#2F7C21"/>
+
+                        <ImageView
+                            android:id="@+id/img_arrow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_below="@+id/text_money_best"
+                            android:src="@drawable/ic_arrow_up_mini"/>
+
+                        <TextView
+                            android:id="@+id/id_best"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_below="@+id/text_money_best"
+                            android:layout_marginEnd="10dp"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="FGB"
+                            android:textColor="#311B92"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@+id/pct_best"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginBottom="5dp"
+                            android:text="MAX"
+                            android:fontFamily="@font/poppins_bold"
+                            android:textSize="18sp"/>
+
+
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardworst"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_toRightOf="@+id/cardbest"
+                    app:cardCornerRadius="20dp"
+                    android:elevation="15dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/text_money_low"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:text="245.00"
+                            android:fontFamily="@font/poppins_bold"
+                            android:textSize="30sp"/>
+
+                        <TextView
+                            android:id="@+id/percent_low"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_toRightOf="@+id/img_arrow2"
+                            android:layout_below="@+id/text_money_low"
+                            android:text="3.34%"
+                            android:fontFamily="@font/poppins_medium"
+                            android:textSize="18sp"
+                            android:textColor="#B71C1C"/>
+
+                        <ImageView
+                            android:id="@+id/img_arrow2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_below="@+id/text_money_low"
+                            android:src="@drawable/ic_arrow_down_mini"/>
+
+                        <TextView
+                            android:id="@+id/id_low"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_below="@+id/text_money_low"
+                            android:layout_marginEnd="10dp"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="FGB"
+                            android:textColor="#311B92"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@+id/percent_low"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginBottom="5dp"
+                            android:text="MIN"
+                            android:fontFamily="@font/poppins_bold"
+                            android:textSize="18sp"/>
+
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>
 
             </RelativeLayout>
 
-        </androidx.cardview.widget.CardView>
+        </HorizontalScrollView>
+
+        <TextView
+            android:id="@+id/textToday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_below="@id/hscrollv"
+            android:fontFamily="@font/poppins_bold"
+            android:text="STOCKS NOW"
+            android:textColor="@color/purple_200"
+            android:textSize="20sp"/>
+
+        <ImageView
+            android:id="@+id/btnUpdate"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="50dp"
+            android:layout_below="@id/hscrollv"
+            android:src="@drawable/ic_update"
+            android:textSize="20sp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/cardV"
-            android:layout_marginTop="15dp"
+            android:layout_below="@+id/textToday"
+            android:layout_marginTop="5dp"
             tools:listitem="@layout/card_companies">
         </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
