--- a/app/src/main/res/layout/card_companies.xml
+++ b/app/src/main/res/layout/card_companies.xml
@@ -7,7 +7,8 @@
     android:layout_marginRight="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
-    android:elevation="15dp">
+    android:elevation="15dp"
+    android:background="#66858181">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,26 +24,38 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="15dp"
             android:src="@drawable/c9"/>
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:src="@drawable/border_imageview"/>
+
+        <TextView
+            android:id="@+id/lblTituloComp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/img_comp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="15dp"
+            android:text="Burger King"
+            android:textColor="#2196F3"
+            android:fontFamily="@font/poppins_semibold" />
 
 
         <TextView
             android:id="@+id/lblCompName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/img_comp"
-            android:layout_marginLeft="22dp"
+            android:layout_below="@+id/lblTituloComp"
+            android:layout_toRightOf="@id/img_comp"
+            android:layout_marginLeft="25dp"
             android:text="BBK"
-            android:textColor="#311B92"
-            android:textSize="12sp"
+            android:textColor="#535255"
+            android:textSize="10sp"
             android:fontFamily="@font/poppins_semibold"/>
 
         <TextView
@@ -62,9 +75,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/img_comp"
-            android:layout_marginTop="20dp"
+            android:layout_below="@+id/lblCompName"
             android:layout_marginLeft="25dp"
-            android:layout_centerVertical="true"
             android:text="R$ 1 356, 00"
             android:textColor="#757474"
             android:textSize="20sp"
