--- a/app/src/main/res/layout/buy_dialog_layout.xml
+++ b/app/src/main/res/layout/buy_dialog_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="1500"
+        android:text="0 / 1500"
         android:textSize="28sp" />
 
     <SeekBar
