--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,242 +7,21 @@
     android:background="@drawable/background_comp"
     tools:context="com.app.ui.MainActivity">
 
-    <RelativeLayout
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/nav_view"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/mobile_nav" />
 
-        <com.robinhood.ticker.TickerView
-            android:id="@+id/lblSum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:text="$ 1 233,22"
-            android:textColor="#2196F3"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            app:ticker_animationDuration="1500" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/windowBackground"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu" />
 
-        <TextView
-            android:id="@+id/lblText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/lblSum"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="#2196F3"
-            android:text="TOTAL WORTH"
-            android:textSize="10dp" />
-
-        <HorizontalScrollView
-            android:id="@+id/hscrollv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/lblText">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardbest"
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    app:cardCornerRadius="20dp"
-                    android:elevation="15dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/text_money_best"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="10dp"
-                            android:text="245.00"
-                            android:fontFamily="@font/poppins_bold"
-                            android:textSize="30sp"/>
-
-                        <TextView
-                            android:id="@+id/pct_best"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_toRightOf="@+id/img_arrow"
-                            android:layout_below="@+id/text_money_best"
-                            android:text="3.34%"
-                            android:fontFamily="@font/poppins_medium"
-                            android:textSize="18sp"
-                            android:textColor="#2F7C21"/>
-
-                        <ImageView
-                            android:id="@+id/img_arrow"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginStart="10dp"
-                            android:layout_below="@+id/text_money_best"
-                            android:src="@drawable/ic_arrow_up_mini"/>
-
-                        <TextView
-                            android:id="@+id/id_best"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_below="@+id/text_money_best"
-                            android:layout_marginEnd="10dp"
-                            android:fontFamily="@font/poppins_medium"
-                            android:text="FGB"
-                            android:textColor="#311B92"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_below="@+id/pct_best"
-                            android:layout_alignParentBottom="true"
-                            android:layout_marginBottom="5dp"
-                            android:text="MAX"
-                            android:fontFamily="@font/poppins_bold"
-                            android:textSize="18sp"/>
-
-
-                    </RelativeLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardworst"
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_toRightOf="@+id/cardbest"
-                    app:cardCornerRadius="20dp"
-                    android:elevation="15dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/text_money_low"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="10dp"
-                            android:text="245.00"
-                            android:fontFamily="@font/poppins_bold"
-                            android:textSize="30sp"/>
-
-                        <TextView
-                            android:id="@+id/percent_low"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_toRightOf="@+id/img_arrow2"
-                            android:layout_below="@+id/text_money_low"
-                            android:text="3.34%"
-                            android:fontFamily="@font/poppins_medium"
-                            android:textSize="18sp"
-                            android:textColor="#B71C1C"/>
-
-                        <ImageView
-                            android:id="@+id/img_arrow2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginStart="10dp"
-                            android:layout_below="@+id/text_money_low"
-                            android:src="@drawable/ic_arrow_down_mini"/>
-
-                        <TextView
-                            android:id="@+id/id_low"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_below="@+id/text_money_low"
-                            android:layout_marginEnd="10dp"
-                            android:fontFamily="@font/poppins_medium"
-                            android:text="FGB"
-                            android:textColor="#311B92"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_below="@+id/percent_low"
-                            android:layout_alignParentBottom="true"
-                            android:layout_marginBottom="5dp"
-                            android:text="MIN"
-                            android:fontFamily="@font/poppins_bold"
-                            android:textSize="18sp"/>
-
-                    </RelativeLayout>
-
-                </androidx.cardview.widget.CardView>
-
-            </RelativeLayout>
-
-        </HorizontalScrollView>
-
-        <TextView
-            android:id="@+id/textToday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="20dp"
-            android:layout_below="@id/hscrollv"
-            android:fontFamily="@font/poppins_bold"
-            android:text="STOCKS NOW"
-            android:textColor="@color/purple_200"
-            android:textSize="20sp"/>
-
-        <ImageView
-            android:id="@+id/btnUpdate"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_below="@id/hscrollv"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="30dp"
-            android:src="@drawable/ic_update"
-            android:textSize="20sp" />
-
-        <ImageView
-            android:id="@+id/btnSortUp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_below="@id/hscrollv"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="10dp"
-            android:layout_toLeftOf="@+id/btnSortDown"
-            android:src="@drawable/arrowup"
-            android:textSize="20sp" />
-
-        <ImageView
-            android:id="@+id/btnSortDown"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_below="@id/hscrollv"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="30dp"
-            android:layout_toLeftOf="@+id/btnUpdate"
-            android:src="@drawable/arrowdown"
-            android:textSize="20sp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/textToday"
-            android:layout_marginTop="5dp"
-            tools:listitem="@layout/card_companies">
-        </androidx.recyclerview.widget.RecyclerView>
-    </RelativeLayout>
-
-</ScrollView>
+</RelativeLayout>
